objects/APTS_Stage_Attachment__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Created_On__c</fullName>
        <description>Actual Created on Date for Attachment</description>
        <label>Created On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>APTS_Description__c</fullName>
        <description>Description of the attachment.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Error_Description__c</fullName>
        <description>Error Description if any Validation Error is found during Validation</description>
        <label>Error Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_File_Name__c</fullName>
        <description>This field is not transferred to the Operational Object.  It is used by the Application to locate the appropriate binary file.  All Files should be uploaded to ABB Sharepoint at the following locations and must be no larger than 25MB each:
-	Italy Sharepoint
-	France Sharepoint</description>
        <label>Physical File Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTS_IsPrivate__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If not specified, the system will default to TRUE.</description>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Logical_File_Name__c</fullName>
        <label>Logical File Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Operational_Object__c</fullName>
        <description>Id of the Original Attachment Record</description>
        <label>Attachment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_OwnerId__c</fullName>
        <description>ID of the user who owns the note.</description>
        <label>OwnerId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ParentId__c</fullName>
        <description>This is the unique identifier for the particular type of Parent.</description>
        <label>Parent Local ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Parent_Type__c</fullName>
        <description>This field is not transferred to the Operational Object. It is used by the Application to locate the correct Parent.</description>
        <label>Parent Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_RowStatus__c</fullName>
        <description>RowStatus of the record. For Ex: Initial Load, Validation Passed, Load Complete</description>
        <label>Row Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Stage Attachment</label>
    <nameField>
        <label>Stage Attachment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stage Attachments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>